<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <include
        android:id="@+id/login_titlebar"
        layout="@layout/titlebar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/login_titlebar"
        android:layout_marginTop="@dimen/default_marginTop"
        android:layout_marginLeft="@dimen/default_marginLeft"
        android:layout_marginRight="@dimen/default_marginRight"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical" >

        <cn.boweikeji.wuliu.supplyer.view.ClearEditText
            android:id="@+id/login_username"
            style="@style/ClearEditText.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/login_input_user"
            android:hint="@string/hint_login_username"
            android:inputType="number"
            android:maxLength="11" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" >

            <Button
                android:id="@+id/login_show_pass"
                style="@style/Login_Button_Show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@null"
                android:text="@string/show" />

            <cn.boweikeji.wuliu.supplyer.view.ClearEditText
                android:id="@+id/login_password"
                style="@style/ClearEditText.Light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/login_show_pass"
                android:drawableLeft="@drawable/login_input_password"
                android:hint="@string/hint_login_password"
                android:maxLength="16" />
        </RelativeLayout>

        <Button
            android:id="@+id/login_submit"
            style="@style/Login_Submit"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/btn_default_height"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_default"
            android:text="@string/login" />
    </LinearLayout>

</RelativeLayout>