<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_back"
    android:orientation="vertical" >

    <include layout="@layout/titlebar" />

    <cn.boweikeji.wuliu.view.SendInputItem
        android:id="@+id/from_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/line_light" />

    <cn.boweikeji.wuliu.view.SendInputItem
        android:id="@+id/from_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/line_light" />

    <cn.boweikeji.wuliu.view.SendInputItem
        android:id="@+id/to_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/line_light" />

    <cn.boweikeji.wuliu.view.SendInputItem
        android:id="@+id/to_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/line_light" />

    <cn.boweikeji.wuliu.view.SendGroupItem
        android:id="@+id/message_free"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/line_light" />

    <cn.boweikeji.wuliu.view.SendInputItem
        android:id="@+id/send_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/line_light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/send_accept"
            style="@style/TextAppearance.Small.LightGray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:button="@null"
            android:checked="false"
            android:drawableLeft="@drawable/cb_accept"
            android:gravity="center_vertical"
            android:text="@string/agree_and_accept" />

        <TextView
            android:id="@+id/send_rule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/platform_rule" />
    </LinearLayout>

    <Button
        android:id="@+id/publish"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_default_height"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_default"
        android:text="@string/publish" />

</LinearLayout>